--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
-Testing 2
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+</head>
+
+<body class="bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">Pho House</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item-home">
+                        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Location</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link menu-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-lunch" href="#">Lunch</a></li>
+                            <li><a class="dropdown-dinner" href="#">Dinner</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-order-online" href="#">Order Online</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item-about-us">
+                        <a class="nav-link disabled">About Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container bg-danger">
+        <div class="row">
+            <div class="col-12 col-md-10 col-lg-8 mt-1">
+                <h1>Welcome to Pho House!</h1>
+                <p>This is a page in progress!</p>
+                <p>This is a page in progress!</p>
+                <p>This is a page in progress!</p>
+            </div>
+            <div class="col-12 cold col-md-2 col-lg-4 mt-3">
+                <div class="list-group bg-war">
+                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row bg-secondary">
+            <div class="col bg-secondary">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="Pho.png" class="card-img-top" alt="A bowl of pho">
+                    <div class="card-body">
+                        <p class="card-text">Beef pho served bean sprouts lime and herbs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col bg-secondary">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="Pho.png" class="card-img-top" alt="A bowl of pho">
+                    <div class="card-body">
+                        <p class="card-text">Beef pho served bean sprouts lime and herbs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col bg-secondary">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="Pho.png" class="card-img-top" alt="A bowl of pho">
+                    <div class="card-body">
+                        <p class="card-text">Beef pho served bean sprouts lime and herbs</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col bg-secondary">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="Pho.png" class="card-img-top" alt="A bowl of pho">
+                    <div class="card-body">
+                        <p class="card-text">Beef pho served bean sprouts lime and herbs</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Vertically centered modal -->
+        <div class="modal-dialog modal-dialog-centered">
+            <button type="button" class="btn btn-outline-warning">Warning</button>
+        </div>
+        <!-- Vertically centered modal -->
+        <div class="modal-dialog modal-dialog-centered">
+            ...
+        </div>
+
+        <!-- Vertically centered scrollable modal -->
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            ...
+        </div>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
+    </div>
+</body>
+
+</html>
